# onenote-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  authenticate.js  create-page.js  eslint.config.js  get-all-page-contents-full.js  get-all-page-contents.js  get-page-content.js  get-page.js  list-group-notebooks.js  list-group-pages.js  list-group-sections.js  list-groups.js  list-pages.js  list-sections.js  onenote-mcp.mjs  package-lock.json  package.json  read-all-pages.js  simple-onenote.js  simple-page-content.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
.specstory/history/: 2026-02-04_21-45Z-npm-start-error.md  2026-02-04_23-10Z-github-mcp-server-restart.md  2026-02-05_04-17Z-plan-implementation.md
coverage-report/: index.html
coverage-report/onenote-mcp/: commitlint.config.cjs.html  index.html
lib/: auth.js  config.js  groups.js  onenote-paths.js  pagination.js  selection.js
python/: README.md  pyproject.toml
python/src/onenote_mcp/: __init__.py  client.py
python/tests/: test_client.py  test_mock_server.py
src/: onenote-mcp.ts
src/lib/: auth.ts  config.ts  format.ts  group-paths.ts  groups.ts  logger.ts  onenote-paths.ts  pages.ts  pagination.ts  selection.ts  token.ts  tool-schemas.ts
src/scripts/: authenticate.ts  create-group-page.ts  create-page.ts  get-all-page-contents-full.ts  get-all-page-contents.ts  (+17 more)
tests/: auth-file.test.ts  auth-keychain.test.ts  format.test.ts  group-paths.test.ts  page-content.test.ts  pagination.test.ts  selection.test.ts  tool-schemas.test.ts
(+29 files in other folders)
