[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "onenote-mcp"
version = "0.1.0"
description = "Python client for the OneNote MCP server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/onenote_mcp"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["onenote_mcp"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
